zno-macro-draft/tests/zno/ui/err/007-interleaved.stderr
error: expected literal
 --> tests/zno/ui/err/007-interleaved.rs:4:16
  |
4 | #[zno(name = struct)]
  |                ^^^^^^
