zno-macro-draft/tests/zno/ui/err/007-interleaved.rs
use zno::zno;

#[allow(unused_braces)]
#[zno(name = struct)]
#[warn(unused_braces)]
fn f() {}

fn main() {}
